--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <canvas id="canvas" width="1280" height="720"></canvas>
+    <canvas id="canvas" width="1300" height="720" style="position: absolute; left: 300px;"></canvas>
     <script type="text/javascript" src="lib/bundle.js"></script>
   </body>
 </html>
