Add scoring and game winning.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div id="canvas-bergman">
           <div id="title-screen"
-            <h2>Welcome to MagnaBall, Asshole!</h2>
+            <h2 id="intro-message">Welcome to MagnaBall!</h2>
             <button id="one-player-button">1 player</button>
             <button id="two-player-button">2 players</button>
           </div>
