Add resizeability to field.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </div>
       <div class="gameField">
         <div class="scoreboard">
-          <h2>Player 1</h2>
+          <h2>Red</h2>
           <p id="player-1-score">0</p>
         </div>
         <div id="canvas-bergman">
@@ -23,15 +23,14 @@
             <button id="one-player-button">1 player</button>
             <button id="two-player-button">2 players</button>
           </div>
-          <!-- <canvas id="canvas" width="1300" height="720" ></canvas> -->
         </div>
         <div class="scoreboard">
-            <h2>Player 2</h2>
+            <h2>Blue</h2>
           <p id="player-2-score">0</p>
         </div>
       </div>
-      <div class="message-field">
-        <p>Player 1 scored!</p>
+      <div id="message-field">
+        <p>Player 1 keys: A,S,D,F | Player 2 keys: J,K,L,;</p>
       </div>
     </div
   </body>
