--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <h2>Red</h2>
           <p id="player-1-score">0</p>
         </div>
-        <div id="canvas-bergman">
+        <div id="canvas-container">
           <div id="title-screen"
             <h2 id="intro-message">Welcome to MagnaBall!</h2>
             <button id="one-player-button">1 player</button>
