--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
       <div id="message-field">
         <p>Player 1 keys: A,S,D,F | Player 2 keys: J,K,L,;</p>
       </div>
+      <div id="info-div">
+        <p>Created by Ian O'Keeffe in 2017</p>
+        <div id="links">
+          <a href="http://ianokeeffe.co">Portfolio</a> |
+          <a href="http://github.com/iokeeffe">Github</a>
+        </div>
     </div
   </body>
 </html>
