--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>MagnaBall</title>
     <link href="https://fonts.googleapis.com/css?family=Bungee+Inline" rel="stylesheet">
     <link href="./css/style.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
@@ -18,10 +18,15 @@
         <div class="scoreboard first-player-scoreboard">
           <h2>Red</h2>
           <p id="player-1-score">0</p>
+          <br />
+          <br />
+          <br />
+          <h4>A, S, D, F</h4>
         </div>
         <div id="canvas-container">
           <div id="title-screen">
             <h2 id="intro-message">Welcome to MagnaBall!</h2>
+            <h2 id="intro-message"> Try to get the ball in your opponent's goal.</h2>
             <div id="button-div">
               <button id="one-player-button" class="player-button">1 player</button>
               <button id="two-player-button" class="player-button">2 players</button>
@@ -36,6 +41,10 @@
         <div class="scoreboard second-player-scoreboard">
             <h2>Blue</h2>
           <p id="player-2-score">0</p>
+          <br />
+          <br />
+          <br />
+          <h4>J,K,L,;</h4>
         </div>
       </div>
       <div id="message-field">
