Add Magnet Strength Option

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
               <label>Magnet Collision:
                 <input type="checkbox" id="magnet-collision" checked> </input>
               </label>
+              <label>Magnet Strength (1-10):
+                <input type="text" id="magnet-strength" value=5></input>
+              </label>
             </div>
           </div>
         </div>
